--- a/comparePairs.Rmd
+++ b/comparePairs.Rmd
@@ -22,6 +22,7 @@ pValueType<-rep("singleWindows", length(comparisonNames))
 
 resultsList<-list()
 dmrNumberList<-list()
+
 for (i in 1:length(comparisonNames)){
      # load results into temporary environment
      temp = local({load(resultsFiles[[i]]); environment()})
@@ -51,15 +52,51 @@ resultsList<-lapply(resultsList, function(i){
 # convert resultsList DMR tables to GRanges objects
 gresultsList<-lapply(resultsList, makeGRangesFromDataFrame)
 
+s1<-sapply(strsplit(comparisonNames, split="_|-"), function(i) i[2])
+s2<-sapply(strsplit(comparisonNames, split="_|-"), function(i) i[3])
+s1<-seqFiles$ctFlag[as.numeric(s1)]
+s2<-seqFiles$ctFlag[as.numeric(s2)]
+
+comparisonType<-paste(s1, " vs ", s2, sep="")
+comparisonType[grep("all", comparisonNames)]<-"C vs T"
+
 ```
+
+Pairwise MeDIP analysis summary for the `r projectName` project. Report generated `r format(Sys.Date(), format="%B %d %Y")`
+
+### DMR number
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE, results="asis"}
 
-summaryTable<-cbind("analysis"=comparisonNames, "p-value type"= pValueType, "p-value"=selectedPvalues, "DMR Number"=sapply(resultsList, nrow))
+summaryTable<-cbind("analysis"=comparisonNames, "comparison"=comparisonType, "p-value type"= pValueType, "p-value"=selectedPvalues, "DMR Number"=sapply(resultsList, nrow))
 summaryTable<-as.data.frame(summaryTable)
-pandoc.table(summaryTable, split.tables=Inf, style="rmarkdown", caption='This table shows the p-values and total DMR numbers for each analysis.')
+     
+b<-grep("all", comparisonNames)
+nb<-sapply(strsplit(comparisonNames[b], split="all"), function(i) i[2])
+be<-c(b, length(comparisonNames)+1)
+analysisGroup<-rep(nb,be[-1]-b)
+cb<-split.data.frame(summaryTable, analysisGroup)
+cb<-lapply(cb, function(i) {row.names(i)<-1:nrow(i); i})
+
+for(lp in 1:length(cb)){
+
+     pandoc.table(cb[[lp]], split.tables=Inf, style="rmarkdown", caption=paste("This table shows the p-values and total DMR numbers for each ", nb[lp], " analysis.", sep=""))
+
+}
 ```
 
-```{r, echo=FALSE, message=FALSE, warning=FALSE, results="asis"}
-vennBarSet(gdmrList=gresultsList, names=comparisonNames, col=c("blue", "red"), scale=TRUE)
+
+### DMR overlap
+
+```{r, echo=FALSE, message=FALSE, warning=FALSE, results="asis", fig.height=8}
+for(lp in 1:length(cb)){
+     grl<-gresultsList[which(analysisGroup==nb[lp])]
+     cn<-comparisonNames[which(analysisGroup==nb[lp])]
+     vennBarSet(gdmrList=grl[cb[[lp]]$comparison=="C vs C"], names=cn[cb[[lp]]$comparison=="C vs C"], col=c("blue", "red"), scale=TRUE)
+     vennBarSet(gdmrList=grl[cb[[lp]]$comparison=="T vs T"], names=cn[cb[[lp]]$comparison=="T vs T"], col=c("blue", "red"), scale=TRUE)
+     vennBarSet(gdmrList=grl[cb[[lp]]$comparison=="C vs T"], names=cn[cb[[lp]]$comparison=="C vs T"], col=c("blue", "red"), scale=TRUE)
+
+}
 ```
+
+
