--- a/medipReport.Rmd
+++ b/medipReport.Rmd
@@ -80,6 +80,8 @@ if (useCleanReads) {
     totalS <- numS1 + numS2
     readCounts[i, 2:6] <- c(numRaw, numPair, totalS, numPair / numRaw, (numPair + totalS) / numRaw)
   }
+  # Double underscore is a special character, remove them.
+  readCounts$sampleName <- gsub(readCounts$sampleName, pattern="__", replacement="_")
   row.names(readCounts) <- readCounts[,1]
   readCounts <- readCounts[, -1]
   pandoc.table(readCounts, split.tables = 110, style = "rmarkdown", 
@@ -94,6 +96,7 @@ The following table shows the association between the samples and the original d
 
 ```{r, echo = FALSE, results = "asis", message = FALSE, warning = FALSE}
 fnTable <- as.data.frame(seqFiles[match(sn, seqFiles$sampleName), ])
+fnTable$sampleName <- gsub(fnTable$sampleName, pattern="__", replacement="_")
 row.names(fnTable) <- fnTable$sampleName
 fnTable <- fnTable[, -1]
 colnames(fnTable) <- c("first end filename", "second end filename", "sample type")
@@ -106,7 +109,9 @@ A quality report for each raw data file was generated using FastQC and is availa
 
 ```{r, echo = FALSE, results = "asis", message = FALSE, warning = FALSE}
 if (mapReads){
-  pandoc.table(mapExtract(cleaned = useCleanReads), split.tables = Inf, style = "rmarkdown", 
+  tmp <- mapExtract(cleaned = useCleanReads)
+  colnames(tmp) <- gsub(colnames(tmp), pattern="__", replacement="_")
+  pandoc.table(tmp, split.tables = Inf, style = "rmarkdown", 
                caption = 'This table shows the number of reads present for each sample 
                          and the overall alignment rate calculated by bowtie2.')
 }
@@ -120,6 +125,11 @@ The *`r species`* reference genome was provided by `r provider` and was download
 ## Differential coverage analysis
 The differential coverage analysis was performed using the MEDIPS R package. The analysis used a windows size of `r ws`bp. The `r diff.method` method was used to calculate p-values. The `r p.adj` multiple testing adjustment was also calculated. Annotation information was downloaded from `r ifelse(annotationType == "biomart", 'the Ensembl database using the biomaRt R package', annotationSource)`.
 
+```{r, echo = FALSE, results = "asis", message = FALSE, warning = FALSE}
+ptable <- data.frame("unique"=uniq, "extend"=extend, "shift"=shift, "window.size"=ws, "p.adj"=p.adj, "diff.method"=diff.method, "min.row.sum"=minRowSum)
+pandoc.table(ptable, split.tables = Inf, style = "rmarkdown", 
+             caption = 'This table shows various parameters used for the MEDIPS analysis')
+```
 
 ### DMR definition
 DMRs were defined using a `r diff.method` p-value threshold of `r reportPvalue` or a `r p.adj` adjusted p-value threshold of `r MTCreportPvalue`. The DMR edges were extended to include neighboring windows with a p-value less than `r dmrBoundPvalue`. Genomic windows are considered neighboring if they are within `r adjDist`bp of the DMR boundary. In other words, DMR edges are extended until there is no genomic window within `r adjDist`bp with a p-value less than `r dmrBoundPvalue`. 
@@ -187,30 +197,30 @@ hist(methResults$edgeR.adj.p.value, breaks = 100, ylim = c(0, ylim),
 ### Chromosome plot
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height = 8}
-# Find clusters
-dmrList <- methList[[pvc]]
-
-clusterObject <- slidingWindowCluster(formatForCluster(dmrList), 
-                                      windowLength = 2000000, incrementLength = 50000)
-colnames(clusterObject) <- c("chr", "start", "stop", "minP")
-chrLengths <- seqlengths(eval(parse(text = referenceName)))
-plotChromosomes(siteTable = dmrList, chrLengths = chrLengths, 
-                ymar = 5, clusters = clusterObject)
+# # Find clusters
+# dmrList <- methList[[pvc]]
+# 
+# clusterObject <- slidingWindowCluster(formatForCluster(dmrList), 
+#                                       windowLength = 2000000, incrementLength = 50000)
+# colnames(clusterObject) <- c("chr", "start", "stop", "minP")
+# chrLengths <- seqlengths(eval(parse(text = referenceName)))
+# plotChromosomes(siteTable = dmrList, chrLengths = chrLengths, 
+#                 ymar = 5, clusters = clusterObject)
 
 ```
 
 **Figure 3.** This figure shows the DMR locations on the individual chromosomes or contigs. All DMRs at a p-value threshold of `r format(reportPvalue, scientific = T)` are shown here.
 
 ```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height = 8}
-# find clusters
-dmrList <- methList2p[[pvc]]
-
-clusterObject <- slidingWindowCluster(formatForCluster(dmrList), 
-                                      windowLength = 2000000, incrementLength = 50000)
-colnames(clusterObject) <- c("chr", "start", "stop", "minP")
-chrLengths <- seqlengths(eval(parse(text = referenceName)))
-plotChromosomes(siteTable = dmrList, chrLengths = chrLengths, 
-                ymar = 5, clusters = clusterObject)
+# # find clusters
+# dmrList <- methList2p[[pvc]]
+# 
+# clusterObject <- slidingWindowCluster(formatForCluster(dmrList), 
+#                                       windowLength = 2000000, incrementLength = 50000)
+# colnames(clusterObject) <- c("chr", "start", "stop", "minP")
+# chrLengths <- seqlengths(eval(parse(text = referenceName)))
+# plotChromosomes(siteTable = dmrList, chrLengths = chrLengths, 
+#                 ymar = 5, clusters = clusterObject)
 
 ```
 
@@ -357,6 +367,10 @@ a <- as.data.frame(corMatrix)
 colnames(a) <- seqFiles$sampleName[match(colnames(corMatrix), sbamFileName)]
 row.names(a) <- seqFiles$sampleName[match(row.names(corMatrix), sbamFileName)]
 a <- a[which(match(row.names(a), sn, nomatch=0)>0), which(match(colnames(a), sn, nomatch=0)>0)]
+
+row.names(a) <- gsub(row.names(a), pattern="__", replacement="_")
+colnames(a) <- gsub(colnames(a), pattern="__", replacement="_")
+
 pandoc.table(a, split.tables=110, style="rmarkdown", caption="This table shows the pairwise Pearson correlation coefficient between sample coverage profiles.")
 
 ```
@@ -376,5 +390,54 @@ for (i in 1:length(subCoverList)) {
 ```
 
 **Figure 13.** This figure shows the distribution of CpG coverage across the genome for each sample.
+
+
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height = 6}
+
+par(mfcol=c(1,1))
+mset1.counts <- methResults$MSets1.rpkm.mean
+mset2.counts <- methResults$MSets2.rpkm.mean
+prop.counts <- mset1.counts / (mset1.counts + mset2.counts)
+
+pvt.filter <- which(methResults$edgeR.p.value < reportPvalue)
+filt.m1.c <- mset1.counts[pvt.filter]
+filt.m2.c <- mset2.counts[pvt.filter]
+filt.prop.c <- prop.counts[pvt.filter]
+
+ms1n <- paste(unique(seqFiles[comparison[[an]]$mset1,"ctFlag"]), collapse="")
+ms2n <- paste(unique(seqFiles[comparison[[an]]$mset2,"ctFlag"]), collapse="")
+
+par(mar=c(5,4,4,5)+.1)
+plot(1:length(filt.prop.c), filt.m1.c[order(filt.prop.c)], 
+     ylim=c(0, max(c(filt.m1.c, filt.m2.c))), type="l", 
+     col="red", xlab="Genomic window", ylab="Mean RPKM")
+points(1:length(filt.prop.c), filt.m2.c[order(filt.prop.c)], type="l", col="blue")
+legend("topleft", fill=c("red", "blue", "black"), c(ms1n, ms2n, paste("% ", ms1n, sep="")))
+par(new=TRUE)
+plot(1:length(filt.prop.c), filt.prop.c[order(filt.prop.c)], type="l", 
+     col="black", xlab="", ylab="", xaxt="n", yaxt="n")
+axis(4, col="black")
+mtext(paste("% RPKM read depth in ", ms1n, sep=""), side=4, line=3, col="black")
+```
+
+**Figure 14.** This figure shows mean read number (RPKM) of genomic windows with an edgeR p-value < `r reportPvalue`. Genomic windows are ordered by the proportion of read number (RPKM) in the two groups (shown as the black line).
+
+
+
+```{r, echo = FALSE, message = FALSE, warning = FALSE, fig.height = 7}
+
+nz <- which((mset1.counts != 0) | (mset2.counts != 0))
+smoothScatter(mset1.counts[nz], mset2.counts[nz], xlab=paste("Mean read number (", ms1n, ")", sep=""), 
+     ylab=paste("Mean read number (", ms2n, ")", sep=""), nbin=c(100,100), bandwidth=2, 
+     colramp=colorRampPalette(colors=c("white", "black")))
+points(filt.m1.c, filt.m2.c, col="red")
+abline(a=0, b=1, lty=3, col="blue")
+
+```
+
+**Figure 15.** This figure is a scatterplot of genomic windows plotted by mean read number for the two sample groups. All genomic windows are shown as a grey cloud, with darker areas representing regions with a high point density. Genomic windows with an edgeR p-value < `r reportPvalue` are drawn as red circles. 
+
+
+
 
 
